# kasuari

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  release-plz.yml  rust.yml
src/: constraint.rs  error.rs  expression.rs  lib.rs  operators.rs  relations.rs  row.rs  solver.rs  solver_impl.rs  strength.rs  term.rs  variable.rs
tests/: quadrilateral.rs  removal.rs
tests/common/: mod.rs
