[package]
name = "kasuari"
version = "0.4.0-alpha.1"
authors = ["Dylan Ede <dylanede@googlemail.com>", "Josh McKinney"]
edition = "2021"
description = """
A rust layout solver for GUIs, based on the Cassowary algorithm.
A fork of the unmaintained cassowary-rs crate with improvments and bug fixes.
Kasuari is the indonesian name for the cassowary bird.
"""
documentation = "https://docs.rs/kasuari"
homepage = "https://github.com/joshka/kasuari"
repository = "https://github.com/joshka/kasuari"
readme = "README.md"
license = "MIT / Apache-2.0"
keywords = ["cassowary", "layout", "tui", "solver"]
categories = ["algorithms", "command-line-interface", "graphics", "gui", "rendering"]

[dependencies]
hashbrown = "0.15.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rstest = "0.23.0"
thiserror = "2.0.12"

[dev-dependencies]
fastrand = "2.1.1"
