[package]
name = "kasuari"
version = "0.4.7"
authors = ["Dylan Ede <dylanede@googlemail.com>", "The Ratatui Developers"]
edition = "2021"
description = """
A rust layout solver for GUIs, based on the Cassowary algorithm.
A fork of the unmaintained cassowary-rs crate with improvments and bug fixes.
Kasuari is the indonesian name for the cassowary bird.
"""
documentation = "https://docs.rs/kasuari"
repository = "https://github.com/ratatui/kasuari"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["cassowary", "layout", "tui", "solver"]
categories = [
    "algorithms",
    "command-line-interface",
    "graphics",
    "gui",
    "rendering",
]
rust-version = "1.78"

[features]
default = ["std"]

## enables std
std = ["thiserror/std"]

[dependencies]
hashbrown = "0.15"
thiserror = { version = "2.0", default-features = false }

[dev-dependencies]
rstest = "0.26"
